# open-treaties

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DATA_LICENSE  LICENSE  README.en.md  README.md  SOURCES.md  generate_site.py  pyproject.toml  server.py
.github/workflows/: validate.yml
data/: cat.json  cedaw.json  crc.json  crpd.json  gc-ap1.json  gc-ap2.json  gc-i.json  gc-ii.json  gc-iii.json  gc-iv.json  genocide.json  iccpr-op1.json  iccpr-op2.json  iccpr.json  icerd.json  icescr.json  icj-statute.json  op-icescr.json  outer-space.json  refugee.json  rome-statute.json  udhr.json  un-charter.json  uncac.json  unclos.json  vccr.json  vcdr.json  vclt.json
docs/: index.html
docs/treaties/: cat.html  cedaw.html  crc.html  crpd.html  gc-ap1.html  gc-ap2.html  gc-i.html  gc-ii.html  gc-iii.html  gc-iv.html  genocide.html  iccpr-op1.html  iccpr-op2.html  iccpr.html  icerd.html  icescr.html  icj-statute.html  op-icescr.html  outer-space.html  refugee.html  rome-statute.html  udhr.html  un-charter.html  uncac.html  unclos.html  vccr.html  vcdr.html  vclt.html
schema/: treaty.json
scripts/: fetch_treaty.py  validate_treaties.py
